align center fix

--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@ Text Domain: lalutheme
 	margin:auto 0 !important;
 	padding:auto 0 !important;
 }
+.aligncenter { 
+	margin:auto;
+}
 .right {
     float: right;
 }
